--- a/styles/index.css
+++ b/styles/index.css
@@ -3,13 +3,19 @@ body {
   }
   h1 {
     color: salmon;
+    font-size: 36px;
+    font-weight: 200;
+    font-style: italic;
+    text-align: center;
+    background-color: lightblue;
   }
   p {
     color: black;
+    color: grey;
   }
 
-  #second-paragraph {
-    color:brown;
+  #work-paragraph {
+    color: brown;
   }
 
   .dog-info, .hobbies{
