added another list to index.html

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,13 @@ body {
     text-align: center;
     background-color: lightblue;
   }
+  
+  h4 {
+    color: darkcyan;
+    font-size: 26px;
+    font-style: italic;
+  }
+
   p {
     color: black;
     color: grey;
