--- a/styles/index.css
+++ b/styles/index.css
@@ -10,24 +10,37 @@ body {
     background-color: #0d1523;
   }
 
-  h4 {
+  h2 {
+    color: black;
+    font-size: 26px;
+    font-style: italic;
+    margin: 15px;
+  }
+
+  h3 {
     color: darkcyan;
     font-size: 26px;
     font-style: italic;
+    margin: 15px;
+  }
+
+  h4 {
+    color: coral;
+    font-size: 26px;
+    font-style: italic;
+    margin: 15px;
   }
 
   p {
+    font-size: 18px;
     color: black;
     color: white;
+    margin: 15px;
   }
+
 
   #work-paragraph {
-    color: brown;
-  }
-
-  .dog-info, .hobbies{
-        color:white;
-        background: rgb(158, 12, 158, 0.3);
+    color: yellow;
   }
 
   body {
@@ -40,6 +53,22 @@ body {
         height: 200vh;
   }
 
+  button {
+    background-color:#0d1523;
+    color: lightcoral;
+    text-align: center;
+    font-style: normal;
+    padding: 10px;
+    margin: 15px;
+    border-color: white;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 5px 5px 70px 10px white;
+  }
+  button:hover {
+    background-color: aqua;
+    color: black;
+  }
+
   img {
     border-width: 5px;
     border-style: solid;
@@ -49,4 +78,31 @@ body {
     border-radius: 6px 10px 6px 20px;
     box-shadow: 10px 10px 20px white;
   }
+
+  .dog-info {
+    color:white;
+    background: rgb(158, 12, 158, 0.3);
+    border: 5px dotted  black;
+    display: inline-block;
+    max-width: 1000px;
+    max-height: 100px;
+    /* overflow: auto; */
+  }
+
+  .dog-info {
+    padding: 20px;
+    margin: 20px;
+  }
+
+  .hobbies {
+    border: 10 px solid pink;
+    display: inline-block;
+    width: 600px;
+    margin: 15px 15px;
+    padding: 5px;
+
+  }
+
+
+
   
